--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <!-- <base href="/programiner/"> -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Programiner</title>
+    <title>Programiner - Home</title>
     <meta name="description" content="" />
+    <meta name="google-site-verification" content="ccCbTdq0xWq766Xg9lTl2i-f7_m47-2nIk7brxH_1nA" />
     <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/car-care-automobile.appspot.com/o/channels4_profile%20(1).jpg?alt=media&token=1032821c-73cd-458e-a62e-48b5650a4597" type="image/png" sizes="16x16">
     <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/car-care-automobile.appspot.com/o/channels4_profile%20(1).jpg?alt=media&token=1032821c-73cd-458e-a62e-48b5650a4597" type="image/png" sizes="32x32">
     <link rel="apple-touch-icon" href="725b756a69a7d4c235070e51acd85560.png" sizes="180x180">
