--- a/index.html
+++ b/index.html
@@ -5334,7 +5334,7 @@
                                     <p id="zyVTzk5Wo6B9wbYg"
                                         style="color:#ffffff;font-family:YAFdJjbTu24-1;line-height:1.17857985em;letter-spacing:0.054em;">
                                         <a id="MgTNRQgFzeeY6PiQ" target="_blank" rel="noopener"
-                                            href="https://programiner.github.io/portfolio/"
+                                            href="https://programiner.github.io/portfolio/ajaz.html"
                                             style="color:#ffffff;pointer-events:all;" data-interstitial-link="">Read
                                             More</a><br></p>
                                 </div>
