--- a/index.html
+++ b/index.html
@@ -5314,7 +5314,7 @@
                                 <div id="kimmlwuMy7UI4EEw"
                                     style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                         id="nJ8GaC8Dnq1lTSMO" target="_blank" rel="noopener"
-                                        href="https://drive.google.com/file/d/1pOUbV2fDfYLQ2LAcI31Hmm98yCE5m-CG/view"
+                                        href="https://programiner.github.io/portfolio/ajaz.html"
                                         style="pointer-events:all;" data-interstitial-link=""><svg id="K9AZzxTLLRGIj2GJ"
                                             viewBox="0 0 99.481 22.2634"
                                             style="width:100%;height:100%;opacity:1.0;overflow:hidden;position:absolute;top:0%;left:0%;background:url(&#x27;data:image/png;base64,&#x27;);">
