--- a/index.html
+++ b/index.html
@@ -4699,7 +4699,7 @@
                                 <div id="oPpMYTh0h7DuInLq"
                                     style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                         id="QyZacp9jeYRdgw1Y" target="_blank" rel="noopener"
-                                        href="mailto:teamprograminer@gmail.com?subject=From%20Programiner%20Website"
+                                        href="https://programiner.github.io/contact/ajaz.html"
                                         style="pointer-events:all;"><svg id="YZhrxHXRdTRe1rkN"
                                             viewBox="0 0 67.543 22.2634"
                                             style="width:100%;height:100%;opacity:1.0;overflow:hidden;position:absolute;top:0%;left:0%;background:url(&#x27;data:image/png;base64,&#x27;);">
@@ -4902,7 +4902,7 @@
                                     <p id="szEAv35qwZnKGyFt"
                                         style="color:#ffffff;font-family:YAFdJjbTu24-1;line-height:1.17857985em;letter-spacing:0.054em;">
                                         <a id="pEu19nPoVplqtz4W" target="_blank" rel="noopener"
-                                            href="mailto:teamprograminer@gmail.com?subject=From%20Programiner%20Website"
+                                            href="https://programiner.github.io/contact/ajaz.html"
                                             style="color:#ffffff;pointer-events:all;">Send Message</a><br></p>
                                 </div>
                             </div>
