--- a/index.html
+++ b/index.html
@@ -4698,7 +4698,7 @@
                             <div id="DpWalQG4tJojIpQc" style="padding-top:32.96180847%;transform:rotate(0deg);">
                                 <div id="oPpMYTh0h7DuInLq"
                                     style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
-                                        id="QyZacp9jeYRdgw1Y" target="_blank" rel="noopener"
+                                        id="QyZacp9jeYRdgw1Y" rel="noopener"
                                         href="https://programiner.github.io/contact/ajaz.html"
                                         style="pointer-events:all;"><svg id="YZhrxHXRdTRe1rkN"
                                             viewBox="0 0 67.543 22.2634"
@@ -4901,7 +4901,7 @@
                                     style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                     <p id="szEAv35qwZnKGyFt"
                                         style="color:#ffffff;font-family:YAFdJjbTu24-1;line-height:1.17857985em;letter-spacing:0.054em;">
-                                        <a id="pEu19nPoVplqtz4W" target="_blank" rel="noopener"
+                                        <a id="pEu19nPoVplqtz4W"  rel="noopener"
                                             href="https://programiner.github.io/contact/ajaz.html"
                                             style="color:#ffffff;pointer-events:all;">Send Message</a><br></p>
                                 </div>
@@ -5313,7 +5313,7 @@
                             <div id="q6Eo9Ls14pH9RH8G" style="padding-top:22.37955745%;transform:rotate(0deg);">
                                 <div id="kimmlwuMy7UI4EEw"
                                     style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
-                                        id="nJ8GaC8Dnq1lTSMO" target="_blank" rel="noopener"
+                                        id="nJ8GaC8Dnq1lTSMO"  rel="noopener"
                                         href="https://programiner.github.io/portfolio/ajaz.html"
                                         style="pointer-events:all;" data-interstitial-link=""><svg id="K9AZzxTLLRGIj2GJ"
                                             viewBox="0 0 99.481 22.2634"
