--- a/index.html
+++ b/index.html
@@ -4719,7 +4719,7 @@
                                     <p id="lci8EA0jxr34Nft8"
                                         style="color:#ffffff;font-family:YAFdJjbTu24-1;line-height:1.15693555em;letter-spacing:0.054em;">
                                         <a id="gtWQkDU2o1viuXpu" target="_blank" rel="noopener"
-                                            href="mailto:teamprograminer@gmail.com?subject=From%20Programiner%20Website"
+                                            href="https://programiner.github.io/contact/ajaz.html"
                                             style="color:#ffffff;pointer-events:all;">Contact</a><br></p>
                                 </div>
                             </div>
@@ -4881,8 +4881,8 @@
                             <div id="qr8O87HlxEhbqpWO" style="padding-top:22.37955745%;transform:rotate(0deg);">
                                 <div id="ReHsr2v168Kt4atM"
                                     style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
-                                        id="lanAiX46rqrwLNMG" target="_blank" rel="noopener"
-                                        href="mailto:teamprograminer@gmail.com?subject=From%20Programiner%20Website"
+                                        id="lanAiX46rqrwLNMG" target="_blank"  rel="noopener"
+                                            href="https://programiner.github.io/contact/ajaz.html"
                                         style="pointer-events:all;"><svg id="TnoyVwHNh0zGNR9i"
                                             viewBox="0 0 99.481 22.2634"
                                             style="width:100%;height:100%;opacity:1.0;overflow:hidden;position:absolute;top:0%;left:0%;background:url(&#x27;data:image/png;base64,&#x27;);">
