--- a/index.html
+++ b/index.html
@@ -4996,7 +4996,7 @@
                                 <div id="R1CF6kvx72XUFXXM"
                                     style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                         id="x0xrs78aoBC9jQnB" target="_blank" rel="noopener"
-                                        href="https://play.google.com/store/apps/details?id=com.programiner.pdfreader&hl=en&gl=US"
+                                        href="https://pdfdekhoapp.blogspot.com/"
                                         style="pointer-events:all;" data-interstitial-link=""><svg id="MFYcnsBku9GVJxnt"
                                             viewBox="0 0 99.481 22.2634"
                                             style="width:100%;height:100%;opacity:1.0;overflow:hidden;position:absolute;top:0%;left:0%;background:url(&#x27;data:image/png;base64,&#x27;);">
@@ -5016,7 +5016,7 @@
                                     <p id="vryYigBWQAxNEnMi"
                                         style="color:#511a79;font-family:YAFdJjbTu24-1;line-height:1.17857985em;letter-spacing:0.054em;">
                                         <a id="MkiKl8RqS3nxQJmQ" target="_blank" rel="noopener"
-                                            href="https://play.google.com/store/apps/details?id=com.programiner.pdfreader&hl=en&gl=US"
+                                            href="https://pdfdekhoapp.blogspot.com/"
                                             style="color:#511a79;pointer-events:all;" data-interstitial-link="">Have a
                                             Look..</a><br></p>
                                 </div>
@@ -5028,7 +5028,7 @@
                     <div id="IXPWxZJylLvtynlW" style="padding-top:100%;transform:rotate(0deg);">
                         <div id="MqsUIVYP6dC7DDAp" style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                 id="WcIv6hoRrS99RAqH" target="_blank" rel="noopener"
-                                href="https://play.google.com/store/apps/details?id=com.programiner.pdfreader&hl=en&gl=US"
+                                href="https://pdfdekhoapp.blogspot.com/"
                                 style="pointer-events:all;" data-interstitial-link="">
                                 <div id="Zhep4S4rQgHnyIEP" style="width:100%;height:100%;opacity:1.0;">
                                     <div id="qvE3cOOiY3jVjFqN"
@@ -5156,7 +5156,7 @@
                                 <div id="R1CF6kvx72XUFXXM"
                                     style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                         id="x0xrs78aoBC9jQnB" target="_blank" rel="noopener"
-                                        href="https://play.google.com/store/apps/details?id=com.programiner.pdfreader&hl=en&gl=US"
+                                        href="https://pdfdekhoapp.blogspot.com/"
                                         style="pointer-events:all;" data-interstitial-link=""><svg id="MFYcnsBku9GVJxnt"
                                             viewBox="0 0 99.481 22.2634"
                                             style="width:100%;height:100%;opacity:1.0;overflow:hidden;position:absolute;top:0%;left:0%;background:url(&#x27;data:image/png;base64,&#x27;);">
@@ -5322,7 +5322,7 @@
                                 <div id="R1CF6kvx72XUFXXM"
                                     style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                         id="x0xrs78aoBC9jQnB" target="_blank" rel="noopener"
-                                        href="https://play.google.com/store/apps/details?id=com.programiner.qr"
+                                        href="https://programiner.github.io/detecton/app.html"
                                         style="pointer-events:all;" data-interstitial-link=""><svg id="MFYcnsBku9GVJxnt"
                                             viewBox="0 0 99.481 22.2634"
                                             style="width:100%;height:100%;opacity:1.0;overflow:hidden;position:absolute;top:0%;left:0%;background:url(&#x27;data:image/png;base64,&#x27;);">
@@ -5342,7 +5342,7 @@
                                     <p id="vryYigBWQAxNEnMi"
                                         style="color:#ffffff;font-family:YAFdJjbTu24-1;line-height:1.17857985em;letter-spacing:0.054em;">
                                         <a id="MkiKl8RqS3nxQJmQ" target="_blank" rel="noopener"
-                                            href="https://play.google.com/store/apps/details?id=com.programiner.qr"
+                                            href="https://programiner.github.io/detecton/app.html"
                                             style="color:#ffffff;pointer-events:all;" data-interstitial-link="">Have a
                                             Look..</a><br></p>
                                 </div>
@@ -5354,7 +5354,7 @@
                     <div id="IXPWxZJylLvtynlW" style="padding-top:100%;transform:rotate(0deg);">
                         <div id="MqsUIVYP6dC7DDAp" style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                 id="WcIv6hoRrS99RAqH" target="_blank" rel="noopener"
-                                href="https://play.google.com/store/apps/details?id=com.programiner.qr"
+                                href="https://programiner.github.io/detecton/app.html"
                                 style="pointer-events:all;" data-interstitial-link="">
                                 <div id="Zhep4S4rQgHnyIEP" style="width:100%;height:100%;opacity:1.0;">
                                     <div id="qvE3cOOiY3jVjFqN"
