--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Programiner - Home</title>
     <meta name="description" content="" />
     <meta name="google-site-verification" content="ccCbTdq0xWq766Xg9lTl2i-f7_m47-2nIk7brxH_1nA" />
-    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/car-care-automobile.appspot.com/o/channels4_profile%20(1).jpg?alt=media&token=1032821c-73cd-458e-a62e-48b5650a4597" type="image/png" sizes="16x16">
-    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/car-care-automobile.appspot.com/o/channels4_profile%20(1).jpg?alt=media&token=1032821c-73cd-458e-a62e-48b5650a4597" type="image/png" sizes="32x32">
+    <link rel="icon" href="https://play-lh.googleusercontent.com/BMyttEQrPkeR9-aADEqgqx8Im6-8cnwMGhFPGYSyDOO_a-aintSxBeUCRcfe-vljkA" type="image/png" sizes="16x16">
+    <link rel="icon" href="https://play-lh.googleusercontent.com/BMyttEQrPkeR9-aADEqgqx8Im6-8cnwMGhFPGYSyDOO_a-aintSxBeUCRcfe-vljkA" type="image/png" sizes="32x32">
     <link rel="apple-touch-icon" href="725b756a69a7d4c235070e51acd85560.png" sizes="180x180">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Programiner">
