--- a/index.html
+++ b/index.html
@@ -5176,7 +5176,7 @@
                                     <p id="vryYigBWQAxNEnMi"
                                         style="color:#342F45;font-family:YAFdJjbTu24-1;line-height:1.17857985em;letter-spacing:0.054em;">
                                         <a id="MkiKl8RqS3nxQJmQ" target="_blank" rel="noopener"
-                                            href="https://play.google.com/store/apps/details?id=com.programiner.vidgyan"
+                                            href="https://programiner.github.io/vidgyan/app.html"
                                             style="color:#342F45;pointer-events:all;" data-interstitial-link="">Have a
                                             Look..</a><br></p>
                                 </div>
@@ -5188,7 +5188,7 @@
                     <div id="IXPWxZJylLvtynlW" style="padding-top:100%;transform:rotate(0deg);">
                         <div id="MqsUIVYP6dC7DDAp" style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                 id="WcIv6hoRrS99RAqH" target="_blank" rel="noopener"
-                                href="https://play.google.com/store/apps/details?id=com.programiner.vidgyan"
+                                href="https://programiner.github.io/vidgyan/app.html"
                                 style="pointer-events:all;" data-interstitial-link="">
                                 <div id="Zhep4S4rQgHnyIEP" style="width:100%;height:100%;opacity:1.0;">
                                     <div id="qvE3cOOiY3jVjFqN"
