--- a/index.html
+++ b/index.html
@@ -5156,7 +5156,7 @@
                                 <div id="R1CF6kvx72XUFXXM"
                                     style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                         id="x0xrs78aoBC9jQnB" target="_blank" rel="noopener"
-                                        href="https://programiner.github.io/pdfdekho/app.html"
+                                        href="https://programiner.github.io/vidgyan/app.html"
                                         style="pointer-events:all;" data-interstitial-link=""><svg id="MFYcnsBku9GVJxnt"
                                             viewBox="0 0 99.481 22.2634"
                                             style="width:100%;height:100%;opacity:1.0;overflow:hidden;position:absolute;top:0%;left:0%;background:url(&#x27;data:image/png;base64,&#x27;);">
