--- a/index.html
+++ b/index.html
@@ -1065,8 +1065,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p class="testimonial-content">i liked it's UI design!! 🚀
-</p>
+                    <p class="testimonial-content">i liked it's UI design 🚀</p>
                     <div class="testimonial-author">
                         <img src="https://play-lh.googleusercontent.com/a/ACg8ocKXyEmZaAyCLngYOEctycocQGUPZkrL6Xsk5X3FqmMDqifEyCQEfQ=s64-rw" alt="" class="author-avatar">
                         <div class="author-info">
