--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
                     <li><a href="#apps">Apps</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://programiner.github.io/contact/ajaz.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -803,7 +803,7 @@
                 <p class="hero-subtitle">We build User‑Friendly Apps for our Customers. Let's turn your idea into reality.</p>
                 <div class="hero-btns">
                     <a href="#apps" class="btn btn-primary">Explore Our Apps</a>
-                    <a href="#contact" class="btn btn-outline">Get In Touch</a>
+                    <a href="https://programiner.github.io/contact/ajaz.html" class="btn btn-outline">Get In Touch</a>
                 </div>
             </div>
         </div>
